// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "/pb";
package pb;





// 登陆请求(建立连接后的第一条消息，验证通过后则进行后续流程)
message LoginRequest {
  int32              serverId = 1;   // 当前登陆的服务器id
  string             token    = 2;   // 登陆token(web login api生成的base64字符串)
  map<int32, string> params   = 5;   // 登陆时上传的参数 key: LoginParams
}

// 登陆响应
message LoginResponse {
  int64              uid    = 1;   // 游戏内的用户唯一id
  int32              pid    = 2;   // 平台id
  string             openId = 3;   // 平台openId(平台的帐号唯一id)
  map<int32, string> params = 4;   // 登陆后的扩展参数，按需增加
}